--- a/Stylesheets/common.css
+++ b/Stylesheets/common.css
@@ -5,9 +5,8 @@
 
 :root{
 	/* colors */
-	--background-color:rgb(241, 241, 227);
+	--background-color:rgb(250, 250, 238);
 	--text-color:#121212;
-	--primary-color:#04AA6D;
 	--secondary-color:white;
 	--accent-color:rgb(142, 142, 142);
 
@@ -16,12 +15,11 @@
 	--font-family-primary:"Space Grotesk",serif;
 	--font-family-secondary:"Roboto Mono",monospace;
 
-	/* font-sizes */
 	--font-size-h1: 5rem;
 	--font-size-h2: 2rem;
 	--font-size-h3: 1rem;
 	--font-size-h4: 1rem;
-	--font-size-p: 1.3rem;
+	--font-size-p: 1rem;
 	--font-size-nav: 1rem;
 
 	--font-weight-regular: 400;
@@ -48,7 +46,7 @@
 	--max-width-section: 60rem;
 
 	/* shadow */
-	 --box-shadow-primary: 0px 0px 0px 0px #04AA6D, 6px 6px 0px 0px #04AA6D;
+	 --box-shadow-primary: 0px 0px 0px 0px #0BDE662, 6px 6px 0px 0px #BDE662;
 	--box-shadow-hover: 0px 0px 5px rgba(0, 0, 0, 0.2);
 
 	/* button styles */
@@ -67,47 +65,513 @@
 	 --z-index-header: 1;
 }
 
+/* base styling */
 body{
 	background-color: var(--background-color);
 }
 
+/* top nav */
+header{
+	outline-style:solid;
+	outline-color: black;
+	border-radius:0 0 2% 2% ;
+	padding-bottom:2rem;
+}
+
+/* table of content */
+aside{
+	padding-bottom:var(--spacing-xl);
+}
+
+/* headings */
+h1{
+	font-family:var(--font-family-primary);
+	font-size:4rem;
+	font-weight:bold;
+	line-height:calc(var(--font-size-h1)+0.5rem);
+	color:#121212;
+	margin-left:var(--spacing-xl);
+	margin-right:var(--spacing-xl);
+	margin-bottom:2rem;
+}
 
 h2{
+	color:var(--text-color);
+	padding: var(--spacing-md) var(--spacing-md);
+	border-radius:var(--border-radius);
+	outline-style:var(--outline-style);
+	outline-color:var(--outline-color);
+}
+
+h3{
 	font-family:var(--font-family-secondary);
-	font-weight:var(--font-weight-bold);
+	font-size:var(--font-size-h3);
+	line-height:1.5rem;
+	margin-left:1.5rem;
+	margin-right:1.5rem;
 }
 
-header{
-	background-color:var(--background-color);
+h4{
+	font-family:var(--font-family-secondary);
+	font-size:var(--font-size-h4);
+	line-height:1.8rem;
+	margin-left:1.5rem;
+	margin-right:1.5rem;
+}
+
+h5{
+	font-family:var(--font-family-secondary);
+}
+
+p{
+	font-family:"Roboto Mono", monospace;
+	font-size:1rem;
+	line-height:1.8rem;
+	margin-left:2.25rem;
+	margin-right:2.25rem;
+	margin-top:2.5rem;
+}
+
+/* Class stylings */
+	/* table of content */
+	.table_of_content{
+		padding-bottom:var(--spacing-lg);
+	}
+
+	/* stickies */
+	.empty-sticky{
+		background-color:beige;
+		position:sticky;
+		top:0;
+		z-index:auto;
+		max-width:55rem;
+		margin: auto;
+	}
+
+#written-by, #duration{
+	color:var(--accent-color);
+	font-size:0.9rem;
+}
+.sticky-header, #section1{
+	position:sticky;
+	top:2.5rem;
+	z-index:auto;
+}
+
+.article-info{
+	padding-top:1.5rem;
+	padding-bottom:2rem;
+}
+
+#content{
+	font-weight:800;
+}
+/* aside stylings */
+
+.heading-art{
+	font-family:'Space Grotesk', serif;
 }
 
 
+/* header */
+.header{
+	font-family:var(--font-family-primary);
+	font-size:var(--nav-font-size);
+	padding-top:2rem;
+	margin-left:2rem;
+	margin-right:2rem;
+	display:flex;
+	justify-content:space-between;
+	flex-direction:row;
+	text-transform: uppercase;
+}
+/* inside header */
+.project{
+	font-weight:bolder;
+	color: #04AA6D;
+	text-decoration:underline;
+}
+
+/* NAV BAR */
+.nav-container {
+	font-family:var(--font-family-primary);
+	overflow: hidden;
+	display: flex;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	background-color:white;
+	outline-style:solid;
+	outline-color:#121212;
+	border-radius:0.5rem;
+}
+
+.nav-item {
+	background-color: white;
+	justify-content: center;
+	padding:1rem;
+	text-align: center;
+	font-size:1.3rem;
+}
+
+
+.article-info{
+	display: flex;
+	flex-direction:row;
+	font-family:"nunito",sans-serif;
+}
+
+.layout{
+	display:flex;
+	flex-direction:column;
+}
+/* table content */
+details{ 
+	margin:1rem;
+	background-color:#0e8daf;
+	color:white;
+	padding:1rem;
+	border-radius:0.5rem;
+	font-family:'Space Grotesk', serif;
+	margin:1.5rem;
+	height: 1.5rem;
+} 
+
+.big-quote{
+	font-family:'Space Grotesk',serif;
+	font-size:2rem;
+}
+
+.quote{
+	background-color:white;
+	/* padding:0.3rem; */
+	border-left:8px solid #04AA6D;
+	border-radius:0.5rem;
+	max-width:30rem;
+}
+
+.quotes {
+	padding-top: 0;
+
+}
+
+.quote:hover{
+	background-color:white;
+	padding:0.3rem;
+	border-left:8px #BDE662;
+	border-radius:0.5rem;
+	transition:0.5s;
+	rotate:2deg;
+}
+
+.quote p{
+	transition:0.5s;
+}
+
+.quote p:hover{
+	background-color:white;
+	color:black;
+}
+
+.quote:hover .quote-popup{
+	background-color:black;
+}
+.quotes {
+	padding-top: 0;
+
+}
+
+/* next article button */
+#button {
+		font-family:var(--font-family-primary);
+		padding-top:0.5rem;
+		padding-bottom:0.5rem;
+		padding-left:0.8rem;
+		padding-right:0.8rem;
+		background-color: white; 
+		color: black; 
+		border: 1.5px solid #000000;
+		border-radius:0.8rem;
+		margin-left:18rem;
+	}
+	
+#button:hover {
+		font-family var(--font-family);
+		font-size:1rem;
+		background-color: #04AA6D;
+		color: white;
+}
+
+/* sticky-aside */
+.sticky-aside {
+	background-color: white;
+	border: solid 2px #121212;
+	box-shadow: 0px 0px 0px 0px #121212, 6px 6px 0px 0px #121212;
+	position: sticky;
+	max-width: 20rem;
+	margin-left: 2rem;
+	margin-right: 2rem;
+	border-radius:0.5rem;
+	margin-top:4rem;
+	margin-bottom:2rem;
+}
+
+
+#main-title {display:none;}
+#main-title{
+	font-size:2rem;
+}
+
+#intro{
+	background-color:#ffffff;
+	outline-style:solid;
+	outline-color: 2px #121212;
+	border-radius:0.5rem;
+	padding:1.7rem;
+	margin:2rem;
+}
+
+.full-text { display:none;} 
+
+
+
+@media (min-width:660px){
+aside {
+	grid-column: 1;
+	position: relative;
+	width: 25rem;
+}	
+
+h1{
+		font-size:9.5rem;
+		line-height:9rem;	
+	}
+	
+
+	
 @media (min-width:1280px){
-	/* h1{
-		font-size:calc(var(--font-size-h1) * 1.9);
-		line-height:calc(var(--font-size-h1) * 1.8);	
-		border-bottom:calc(var(--spacing-xl) * 4);
-	} */
-	
-	p{
-		margin:var(--spacing-xl);
-		max-width:40rem;
-		color:#121212;
+/* HEADINGS */
+h1{
+	font-family: var(--font-family-primary);
+	font-size:9.5rem;
+	line-height:9rem;	
+	margin-left:3.85rem;
+	margin-bottom:4.5rem; 
+}
+h2{
+	font-family:var(--font-family-primary);
+	font-weight:var(--font-weight-bold);
+	max-width:60rem;
+}
+
+a{
+	text-decoration: none;
+	color:#121212;
+}
+
+h3 a:hover{
+	background-color:#BDE662;
+	font-size:1.15rem;
+	font-weight:bold;
+}
+
+h4 a:hover{
+	font-size:1.15rem;
+	font-weight:bold;
+}
+
+h4 a:active{
+	background-color:#BDE662;
+	font-size:1.15rem;
+	font-weight:bold;
+}
+
+h5{
+	font-size:1rem;
+	line-height:1.8rem;
+	padding:0.5rem;
+}
+
+/* BODY TEXT */
+	p, blockquote {
+		max-width:48rem;
 	}
+
+/* Base */
+article {
+	grid-column: 2;
+	margin-right: 2rem;
+}
+
+footer{
+	margin-bottom:5rem;
+	margin-left:31rem;
+	margin-top:5rem;
+}
+
+/* CLASS-STYLINGS */
+/* top nav deskptop display */
+.short-text { display:none;}
+.full-text { display: inline-block;}
+
+
+/* text styling */
+.big-quote{
+	font-family:'Space Grotesk',serif;
+	font-size:2rem;
+}	
+
+.big-text:hover{
+	font-family:var(--font-family-secondary);
+	font-size:1.2rem;
+	font-weight:bolder;
+}
+
+.highlighted-text{
+	background-color:#BDE662;
+	opacity:70%;
+}
+
+/* blockquotes */
+	.bigger-quote{
+		font-family:var(--font-family-primary);
+		font-size:3rem;
+		padding:1.5rem;
+		margin-left:4rem;
+	}
+
+	.big-quotes{
+		background-color:white;
+		border:2px solid #121212;
+		border-left:10px solid #121212;
+		border-radius:2rem;
+		padding:0.2rem;
+		border-radius:0.5rem;
+		max-width:30rem;
+		margin-left:20rem;
+	}
+
+	.big-quotes:hover{
+		background-color:white;
+		border-left:10px solid #121212;
+		padding:0.2rem;
+		border-radius:0.8rem;
+		max-width:50rem;
+		transition:0.5s;
+		margin-top:5rem;
+		margin-bottom:5rem;
+		margin-left:10rem;
+		margin-right:5rem;
+	}
+
+	.big-quotes p{
+		font-weight:bolder;
+	}
+
+	.big-quotes p:hover{
+		/* transition:0.5s; */
+		font-size:2rem;
+		line-height:3rem;
+	}
+
+	cite{
+		color:grey;
+	}
+
+/* top nav */
+.header{
+	margin-bottom:4rem;
+}
+
+/* div aside */
+.grid {
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	grid-template-areas: 'aside article';
+	column-gap: 1.5rem;
+	padding-top:4rem;
+}
 	
-	.sticky-aside {
-		background-color:var(--secondary-color);
-		color:var(--text-color);
-		position: sticky;
-		max-width:calc(var(--max-width-content) / 2);
-		margin-left: 3rem;
-		margin-right: 3rem;
+/* table-of-content */
+.sticky-aside {
+	position: sticky;
+	top: 2.5rem;
+	background-color: white;
+	color: black;
+	position: sticky;
+	max-width: 20rem;
+	margin-top:0rem;
+	margin-left: 3rem;
+	margin-right: 2rem;
+	border-radius:0.5rem;
+	border: solid 2px black;
+}
+
+/* section heading */
+.sticky-header {
+	max-width:55rem;
+	margin: auto;
+}
+
+/* IDs stylings */
+
+/* secondary main title */
+#main-title { display:inline-block;}
+
+#main-title{
+	font-family:var(--font-family-primary);
+	font-size:6.5rem;
+	font-weight:600;
+	padding-bottom:2rem;
+}
+	#intro{
+		font-family: "poppins", sans-serif;
+		max-width:48.5rem;
 		border-radius:1rem;
-		border: solid 1px var(--secondary-color);
+		z-index:1;
+		padding:1rem;
+		margin-left:3rem;
+		margin-bottom:3rem;
 	}
-	
-	.layout{
-		display:flex;
-		flex-direction:row;
+
+	/* top nav styling */
+	#strike{
+		color: #121212;
+		padding:0.2rem;
 	}
+
+	/* next buttons */
+	#button {
+		font-family:var(--font-family-primary);
+		font-size:1rem;
+		padding-top:0.5rem;
+		padding-bottom:0.5rem;
+		padding-left:0.8rem;
+		padding-right:0.8rem;
+		background-color: #ffffff;
+		color: black; 
+		border: 2px solid #000000;
+		border-radius:0.5rem;
+		margin-left:72rem;
 	}
+
+	#button:hover {
+		font-family var(--font-family-primary);
+		font-size:1rem;
+		background-color:#BDE662;
+		padding-top:0.5rem;
+		padding-bottom:0.5rem;
+		padding-left:0.8rem;
+		padding-right:0.8rem;
+		border: 2px solid #000000;
+		border-radius:0.5rem;
+		margin-left:72rem;
+	}
+
+	/* citation in footer */
+	#citation{
+		font-size:0.9rem;
+	}
+}
