--- a/Stylesheets/article-1.css
+++ b/Stylesheets/article-1.css
@@ -26,6 +26,8 @@ h1{
 }
 
 h2{
+	font-family:var(--font-family-primary);
+	font-weight:bolder;
 	background-color:var(--article01-primary-color);
 	color:var(--text-color);
 	padding: var(--spacing-md) var(--spacing-md);
