--- a/Stylesheets/common.css
+++ b/Stylesheets/common.css
@@ -96,6 +96,8 @@ h1{
 }
 
 h2{
+	font-family:var(--font-family-primary);
+	font-size:1.2rem;
 	color:var(--text-color);
 	padding: var(--spacing-md) var(--spacing-md);
 	border-radius:var(--border-radius);
